# git-repo

./: .gitignore  .gitreview  .testr.conf  README.rst  kubernetes.yaml  projects.yaml  requirements.txt  setup.cfg  setup.py  sync-git-repo.py  test-requirements.txt  tox.ini
docs/: projects.yaml
git_repo_sync/: app.py  errors.py  utils.py  validator.py
git_repo_sync/objects/: projects.py
git_repo_sync/schemas/: __init__.py  projects_schema.py
gitrepo/: __init__.py  app.py  error.py  errors.py  utils.py  validator.py
gitrepo/commands/: __init__.py  base.py  sync.py
gitrepo/objects/: __init__.py  base.py  project.py  sync.py
gitrepo/schemas/: __init__.py  projects_schema.py
gitrepo/tests/unit/cli/: clibase.py  test_sync.py
gitrepo/tests/unit/common/: test_utils.py
gitrepo/v1/: __init__.py  base.py  sync.py
