[metadata]
name = gitrepo
version = 0.1.0.dev1
summary = Package allows to sync repositories according to provided mapping
description-file =
    README.rst
author = Mirantis Inc.
author_email = product@mirantis.com
url = https://github.com/SergK/git-repo
home-page = https://github.com/SergK/git-repo
classifier =
    Development Status :: 4 - Beta
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Topic :: Utilities

[files]
packages =
    gitrepo

[entry_points]
console_scripts =
    gitrepo=gitrepo.app:main

gitrepo =
    sync=gitrepo.commands.sync:GitSyncCommand
